[package]
name = "bsd-kvm"
version = "0.1.0"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/bsd-kvm"
keywords = ["bsd", "ffi"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "BSD Kernel Data Access Library (libkvm) binding"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bsd-kvm-sys = "0.1.0"
thiserror   = "1.0"
